# DocumentExtraction

./: README.md  main.py  pyproject.toml
models/: citationModel.py  classificationModel.py  githubActionModel.py  resumeModel.py
prompts/: classification.prompt  correction.prompt  extraction.prompt  extraction_stateful.prompt  get_runs_block.prompt  github_action.rules
utils/: inference.py  textExtraction.py
